  (Bug #1518400) (Matthieu Casanova)

- Fixed Untitled buffer added to the Recent file list (Bug #1518620)
  (Matthieu Casanova)

- MiscUtilities.canonPath() now trim redundant / and \ at the end of the path
  of Dos derived OS (bug that can be seen when typing some / in the end of the
  path field of VFS browser) (Matthieu Casanova)

- SF bug 1519237: Regular Expression Search in 4.3pre5
  regexp search should be done with Pattern.MULTILINE enabled, otherwise
  ^ and $ will only match the start and end of the buffer. (Marcelo Vanzin)

- SF bug 1517395: Wrong character encoding in killring.xml
  fix bug in Java 1.5 by saving ASCII control characters as character
  entities; since 1.4 doesn't support XML 1.1, if killring.xml has
  character entities it will fail (so the bug will still be there
  when running on 1.4). (Marcelo Vanzin)

- SF bug 1523261: "Regular expression " and "Ignore case"
  There was a stray "flags" variable in PatternSearchMatcher.nextMatch()
  that was clobbering the instance variable with the same name (that
  actually contained the needed flags for the compiled pattern).
  (Marcelo Vanzin)

- SF bug 1523117: Add explicit fold in PHP mode inserts wrong comments
  The "DEF_CLASS" rule set in the php mode file didn't have any line
  or range comments declared in the props section; so the code was now
  picking up the porperties for the default rule set, which had the
  HTML-style range comment instead of the PHP line comment. This is
  probably due to the XML parser change - the old code was probably
  propagating some property of another rule set to the DEF_CLASS rule
  set, since it used global variables for a bunch of things. So this
  might show up in other places, and might need a better fix...
  (Marcelo Vanzin)

- SF bug 1524032: Line number not highlighted when the line is selected
  (Nicholas O'Leary)

- SF bug 1524155: replace all within selection doesn't give feedback
  (Nicholas O'Leary)
